# ComputerVisionSS24

./: README.md  pyproject.toml
exercise_0_introduction/src/: main.py
exercise_0_introduction/test/: test.py
exercise_0_introduction/utils/: __init__.py  functions.py
exercise_1_feature_detection/src/: main.py
exercise_1_feature_detection/test/: test.py
exercise_1_feature_detection/utils/: __init__.py  functions.py  util.py
exercise_1_prep_vectorization_tutorial/src/: SmallVectorizationTutorial.ipynb
exercise_2_panorama_stitching/src/: main.py
exercise_2_panorama_stitching/test/: test.py
exercise_2_panorama_stitching/utils/: __init__.py  functions.py
exercise_3_structore_from_motion/src/: main.py
exercise_3_structore_from_motion/test/: test.py
exercise_3_structore_from_motion/utils/: __init__.py  functions.py  util.py
